--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ h1{
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   width: 100%;
 }
 #todo_text {
