--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ h1{
   justify-content: flex-start;
   align-items: center;
   width: 500px;
-  /* height: 700px; */
+  height: 700px;
+  overflow-y: scroll;
   flex-direction: column;
 }
 .totdo_container .todo_list form {
